--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,1 +1,11 @@
-<h1>Footer</h1>
+<footer>
+  <div class="row">
+    <div class="col-lg-12 footer">
+      &copy;{{ site.time | date: "%Y"  }} Samvera. All rights reserved. <br />
+      {% if page.last_updated %}<span>Page last updated:</span> {{page.last_updated}}<br/>{% endif %} Site last generated: {{ site.time | date: "%b %-d, %Y"  }} <br />
+      <a href="{{site.organization_link}}">{{site.organization_link_name}}</a><br />
+      <a href="{{site.community_link}}">{{site.community_link_name}}</a><br />
+      <p><img src="/images/samvera_logo.png" alt="Samvera Logo"/></p>
+    </div>
+  </div>
+</footer>
