Start adding software docs pages

--- a/_includes/software/header.html
+++ b/_includes/software/header.html
@@ -1,6 +1,2 @@
-<h2>{{ page.software.name }}</h2>
-
-
-{% for version in page.all_software_verisons %}
-    {{ product.title }}
-{% endfor %}
+<div class="versions">
+</div>
