--- a/_sass/colors.scss
+++ b/_sass/colors.scss
@@ -4,9 +4,13 @@ $samvera-orange: #f75a00;
 $samvera-red: #c60118;
 $samvera-brown: #a44c31;
 
-// Other site colors
-$palette-light-shade: #F0F2EF;
-$palette-light-accent: #F75A00;
-$palette-main: #7F9199;
-$palette-dark-accent: #94563E;
-$palette-dark-shade: #242326;
+// Main palette
+$color-light-shade: #F5F2E8;
+$color-light-accent: #E17E75;
+$color-main: #8B2A01;
+$color-dark-accent: #879795;
+$color-dark-shade: #402736;
+
+// Special use colors
+$color-assuring: #8dac6e;
+$color-warning: #e85729;
