--- a/css/default.scss
+++ b/css/default.scss
@@ -1,16 +1,17 @@
 ---
 ---
 @import 'colors.scss';
+@import 'header.scss';
 @import 'main-content.scss';
 @import 'homepage.scss';
 @import 'footer.scss';
 
 body {
-  background: $palette-light-shade;
+  background: $color-light-shade;
+  color: $color-dark-shade;
+  margin: 0 25px;
 
-  nav {
-    background: $palette-dark-shade;
-    color: $palette-light-shade;
-    padding: 10px;
+  a:hover {
+    color: $color-dark-shade;
   }
 }
